sae503/user/user-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: clementserandour/api_users:latest
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: csv-storage
          mountPath: /data
      volumes:
      - name: csv-storage
        persistentVolumeClaim:
          claimName: csv-pvc
