sae503/user/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
  namespace: prod
spec:
  selector:
    app: user-api
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
